--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
     <title>Priority todo</title>
     <meta charset="UTF-8">
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Dependencies-->
-    <link rel="stylesheet" type="text/css" href="js/libs/twitter-bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
 </head>
-<body ng-app="app" ng-controller="HomeController"> 
+<body ng-app="app" ng-controller="HomeController">
     <!--Dependencies-->
     <script type="text/javascript" src="js/libs/angularjs/angular.js"></script>
     <script type="text/javascript" src="js/libs/angular-route/angular-route.js"></script>
@@ -17,5 +18,15 @@
     <script type="text/javascript" src="js/app.js"/></script>
     <!-- HTML -->
     <div class="app container" ng-view></div>
+    <!-- Analytics -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56437310-6', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
